--- a/SmartImageTool/index.html
+++ b/SmartImageTool/index.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Smart Image Tool</title>
 <style>
 body {
-font-family: sans-serif;
+font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+margin: 0;
+min-height: 100vh;
 display: flex;
+flex-direction: column;
 align-items: center;
-justify-content: space-between;
-padding: 20px;
+justify-content: center;
+gap: 20px;
+background: #f0f2f5;
+color: #222;
 }
 
-#status-text {
-font-size: 20px;
+header {
+font-size: 1.5rem;
+font-weight: 600;
+user-select: none;
 }
 
 #badge-container {
@@ -21,12 +30,42 @@ display: flex;
 align-items: center;
 gap: 12px;
 }
+
+/* The green dot style (optional animation) */
+.green-dot {
+position: fixed;
+bottom: 10px;
+right: 10px;
+width: 12px;
+height: 12px;
+background: #00ff88;
+border-radius: 50%;
+z-index: 9999;
+animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+0%, 100% {
+opacity: 1;
+transform: scale(1);
+}
+50% {
+opacity: 0.6;
+transform: scale(1.2);
+}
+}
 </style>
 </head>
 <body>
-<div id="status-text">🧠 Smart Image Tool Loaded</div>
-<div id="badge-container"></div>
+<header>🧠 Smart Image Tool Loaded</header>
 
-<script src="./autoScript.js"></script>
+<main>
+<div id="badge-container" aria-live="polite" aria-label="User profile badge"></div>
+<noscript>
+<p style="color: red;">JavaScript is required to load the Smart Image Tool badge.</p>
+</noscript>
+</main>
+
+<script src="./autoScript.js" defer></script>
 </body>
 </html>
